@@ -1,5 +1,5 @@
 DEFINED_PHASES=compile install postinst postrm preinst setup test unpack
-DEPEND=>=sys-devel/patch-2.7.1-r3 <sys-devel/patch-2.7.3 !build? ( sys-apps/sed >=sys-devel/binutils-2.11.90.0.31 )
+DEPEND=>=sys-devel/patch-2.7.4 !build? ( sys-apps/sed >=sys-devel/binutils-2.11.90.0.31 )
 DESCRIPTION=The very latest -git version of the Linux kernel
 EAPI=5
 HOMEPAGE=http://www.kernel.org
@@ -12,4 +12,4 @@ RESTRICT=binchecks strip
 SLOT=3.19_rc7
 SRC_URI=mirror://kernel/linux/kernel/v3.x/testing/patch-3.19-rc7.xz mirror://kernel/linux/kernel/v3.x/linux-3.18.tar.xz
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	kernel-2	e0363401e3e385deca89bb9a22b528bb	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	7d5f4ad9ba85664d8c5f56041a70f4c3	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=89e7caae8a94bf18895a1a582363d6e6
+_md5_=7efe76b8c5c8f6fd289d767369e31aa6
