@@ -2,26 +2,14 @@
 Hash: SHA256
 
 DIST linux-3.18.tar.xz 80934708 SHA256 becc413cc9e6d7f5cc52a3ce66d65c3725bc1d1cc1001f4ce6c32b69eb188cbd SHA512 2f0b72466e9bc538a675738aa416573d41bbbd7e3e2ffd5b5b127afde609ebc278cec5a3c37e73479607e957c13f1b4ed9782a3795e0dcc2cf8e550228594009 WHIRLPOOL 81634af631b7d30ccd1f4798f96f44d9aa0ba6609b73f2747eb6aebaf7a99487fb2dbd45767605186182533cb222bfd9236e8dd5e11a04fdb67c211e4e0a91d6
-DIST patch-3.19-rc1.xz 5859912 SHA256 42ba3005a984e397c11b8fcdfbb3310e005293ce9ce79e8e2d0e70fcf8c4f180 SHA512 a047b4954c2662cfc44d8828b1a6e97047452f1937bc45b7d5888c22dc1cf4ca268c37815e41f51d745777a896817433ebeb1d79ba13ce31a231072df28b8ca2 WHIRLPOOL 35300d1f0caf58ce69cc76037c916fb0f38b2c768551451b25b99ced230e94188b6c935413f001d7898f2debaca56f33131be9d68401ec6391964a4420c9053b
-DIST patch-3.19-rc2.xz 5866896 SHA256 47e3e705485e7ffee4b119a229b63acab5603d765142427b041af1d511b4e05f SHA512 d0f43a08b2afffa27c1e02459033bb769e98001b5907268d538e26b56864e43cabb7af7426d8540f66a523629283d935021bc840ddb40ca558051a1d8a2820d7 WHIRLPOOL 4dc4114f604279d70988817df112febb6dafc73f848390f7a9a489dc33c9ba1f3bc53c8e7b0c9f35a2b170091025028073bf7ab0f07c867e3f3ce6ebb2d53a2b
-DIST patch-3.19-rc3.xz 5905536 SHA256 eaa6ab2e8dbcf92809142b0c552dca30474bb1b6fe59cb8d5c2ebcda5b362d36 SHA512 3d858d1ebb4cd33b2eac78e8752b26e5d4266e973d4b1ad85d6bba6601ad0789c88e52a79fce02a677c4c0852f3e7ca05b35220983bb53ac79d56ccb504ca8e6 WHIRLPOOL 5e5f40283ee8c6ebbe4be8abe4bb8b20f337e1a39f036435b5e9b8ca5286e9d6c30d5c72f00b6d20487d628464fa8f484f7d4c654d709dfe34d8be1c6bf7879c
-DIST patch-3.19-rc4.xz 5938480 SHA256 dab3b0ea8caff16ebc68380e88ad09b79a61a3bf291c1bbf116b55b06ac35273 SHA512 4ce5b0eda402086d519c58d059a8a37d2b66c06ceb877448934f49111f6c5f84f333a9d63e882a5b806d5bc99e4fc7606e9c6e2ee787f67c943c65549f5f7b01 WHIRLPOOL 9832d2df533f181f5ef70ee763e2bd02875d3244a7a57bb2347abc651daab8cf7381999e5a2231d1a491fdbf368950c4e510dd87a452bcf378dcd0d6c6c6a55f
-DIST patch-3.19-rc5.xz 5981512 SHA256 a77dc24e149f0f90fa2b34508b40ed5d725a8f5690ea6873bb8641e2c0642623 SHA512 2d9e2c6226f91ab7bc91f405afbf1a6b92c182f3e33e1b2269abd52c6ae9b1a2814cec2b45cef2a8006e645077ce378310f78893c57486f35dbee79a84b1664a WHIRLPOOL 67747c22770a576ba2031931c06999c631a2dacd55ae214e995bf0499715ea03c3000b637f8db1c1031ae7ae8986cd9a88cc2dc88fe93f5f5915875b090e5caa
-DIST patch-3.19-rc6.xz 6013056 SHA256 a333002cc872c7aa354a99b8b56bb258ec56ada49d1d3a70f17dbbef73e164b2 SHA512 a0ebbbd5e9ba3c89bd946abb21cff993ac7cdff849ac04ebb623d0c54de6c966d5b4c18da78840a81703f567dd56554c51913e62ebdae486c10df69935ae1883 WHIRLPOOL 61dfee16ddec324922970120bdd66ced4a031134c2eb5e4ffb8cb551ad5981cdd4d3f9149f738256903eaf234f467ea751a16685842aaf4889aaba4c2055c80f
 DIST patch-3.19-rc7.xz 6056432 SHA256 e219d8af23fc3d6b71d33fcdecda5d4caef072b1749974c63986b09c56137b65 SHA512 77ecb1a751ed51aa9854f5998840f87e002484f659165d4efd08939d3312ff0490edadb603c7d8e5908a9a50dcbba77824ce9e8dc8c6803e3147f3c42902194e WHIRLPOOL 7f472da07ccb44fcdd475d4505ca0fa57a498b47f780789f80e7de2a9b3ad4ee67f9d9c5b28beb9f75474b110c5c614b99e397c3b420e9d516e6fdb4c477eac8
-EBUILD git-sources-3.19_rc1.ebuild 1290 SHA256 5f823096c646bd0df96d651e9ec31aa59b5c7a0fa8aa3768b00d8223a962f4ab SHA512 ed6f5f52ded591668f460303c4f874ecfc5305dc8a07bb6fb578327db78865ae136a9cb6ac01aaefd08b9b86e12fdbc71b8ac216e83ea688c8579aab82ecda4f WHIRLPOOL 2fd3d936518d11301a343cc81d238c86dbe868f5f0c17319ff942f25c29518336bb9e347ace22afe6765e0ee6d2a2ab85b49039d110efbb0bf2843238d339e51
-EBUILD git-sources-3.19_rc2.ebuild 1290 SHA256 e735bd0edc6d0b5a80acaca3d966d258bb79146e625ad63b7e4515e92685fbb9 SHA512 aa9252f5dfd8d0eaea30eb540c751767960f247fbc3a83221f1702161d35d0d24f5da51a80df1d0628a688295b2739dc116b866140ec2490530a1ad8850cf3b0 WHIRLPOOL 63232e0ac8976b0cd6370a2a6b70d463010758fa3690dd67cfde6f1dc12f0abe68a60519ca850b055f4a7aa6ac9c5c0e583964b039d67a5708742d0178181a02
-EBUILD git-sources-3.19_rc3.ebuild 1290 SHA256 fb8447779dc069e19aeb4d70f5899da0982a2a101be60dfeeb0aae1f1d11eca2 SHA512 bc2ce4810b02ddb1a5bfed3111158583cc7453a24aee951fc6b9051b035506a08c9397718167cde486176df75920c4c0f06e536d8aa3c78d33f7742f38ea8afc WHIRLPOOL d0d43f4c3724e0fd32f8f0f6b7713f6c0fd57ae60e71e3eb97542610532e0cb156c54d27c09f85a1a4918f4c8b09b5d0828a033039b4d90a87920491df6120df
-EBUILD git-sources-3.19_rc4.ebuild 1290 SHA256 4cc9549c58754cbaf9d04124a7964f813013ea2d978ec56e75458553e1ac5156 SHA512 e6be107482e1bbca00a6a9f23c987688f38b27a9442505b9ece359ddcd7957f89cc4da4b5100b1086190554828ff4cc237e553b68412f08f7049cc12dfd4e773 WHIRLPOOL a75092ee29fd2fd1c563c461a95665643c6a3e30ae7e2c7e95e1483b97d5f8cb051f21bce9eeedfcbb7d44ca875f813a23be8380be66c5c051be839dd95be088
-EBUILD git-sources-3.19_rc5.ebuild 1290 SHA256 6e7899bcb692367f04f93c3d2920a201da2ba77acec7d106aa0e47e9f6328cb6 SHA512 5445d4ab455afb428247fe712a0248fe88740df1cb4357b405594db7fd6b308468d6c8612a82a326933a75a1dc881b78273adf19483c35fc9263381ad88b1ed8 WHIRLPOOL c116bb2e9b663cb2f4e8d027ea199043a99c6f819c3700fa46a54cb722c61b6b46f9bd8341bed4bfec6b1565dcd696a8c0c737f5d72a8fae48ee28b3a814ca6e
-EBUILD git-sources-3.19_rc6.ebuild 1290 SHA256 8b8931ede3f73611e57a062b12a8f415a5ee3ae0feede3298e760b2069307ccd SHA512 5ba2b3f8e237974252b41532663936c1ba3ce72338693e546d080322bf5ffd15e823b49710f5a4b6ecb9c4896c38094aeb8622044749e0aab3429e4d4a215411 WHIRLPOOL dcaddd07f324d27b50bdfa8f484ecacf031837719a51147207557d0278079a440917d02b7f990200616967a86c2ab0360373b65836f9c414eb5d1ca1888054b7
-EBUILD git-sources-3.19_rc7.ebuild 1290 SHA256 672d2c00bcd55348dd35badff3bfc86c1094c8416edfb90e339c8336a71e48f1 SHA512 6465d99d802b458819452ceefbc37d89beedb3c091958f7246db8752896954f0cd87f91abc32990c60485e7e6eb9a678b100a487128a8c2b55620cb4b4aa68f3 WHIRLPOOL 50fd5a55e969e30cc4402e2c625721947a6dabd49f9d23bc29693e4a8a74d4f75d98ad947a48ae1496f0520b597b44fe33f958edbe16915fc87198b38d84c4fc
-MISC ChangeLog 45906 SHA256 4242a04ea1f241ffe0e844237e885b827f4284b3c8b29efab50fbfc897939fda SHA512 7512e90e109f533816c800737f51bcc11ed500bf5a5093db0436503597431db2c57050aab127a60cb9e96f292ab661efffd33ef1334abf138c8b9e4cfd024a91 WHIRLPOOL 2e352a5f4b59d01d4fae7ef55c05193055a5e5bee2514df97bdf718bf87fa50bbd14c0e8c1f657d57a50e9556cabfe3a56762fffbddc1728c6faeaff1eb5e053
+EBUILD git-sources-3.19_rc7.ebuild 1264 SHA256 c0585b757185705958249c26197653c1da639cfbdf3dcb92a6e4559c8509c8b5 SHA512 680e846fd20e48671e3b1bbec1e4534b7100931ada63bf04a96a2bcf1a814cea9892a5821ac08da02baf1c3a149e57e6e918d2f925cc32de9d2e5558bc9493c4 WHIRLPOOL 53582ec2b91f98b81e3cdbfcbed18edb105532e539151159c360ff37ddbeb77745cd6225ee17b85561800063247fb947cbb1bac5b3b1c398a43fd315009cba74
+MISC ChangeLog 46211 SHA256 d5b9d546a6a11ddc0eedcf48c27fedd61bd98009a10e46b74b7a6454cecf1058 SHA512 f498ea88f97a6d3f94ab87e10de2aff7f25a71cfb6d61f6fb39dbfda2a181f7af032c92c730b7dff40c3613a3e9032319bfc95d45633f76e7d66e1ac37aa3a4f WHIRLPOOL 3969a557012f778e293b20a9ebdaa6936ad9e0b1f9d985f7c0b3bef507891ff99c15effa3749b9f1f8e9f46773936312d7f4e4cb957dbe852d76d672486881c0
 MISC metadata.xml 533 SHA256 85e5cf7dda5967132711e350d6b4194f7e2c5bece3732ce74d912c28f0afb3bc SHA512 561f9e4a87bc3518664912bf9e3dd6d83366a154038e3c2a901d8275a2b3a40e711e47ea555eacbed816cea36a174ffe2a7f63895ca006491f4e1efec5f7a27e WHIRLPOOL d4dfacd52a04d2737b3abb2a7d4f6772980a97759dae6fa80bef1863b356902612a0702cd9894148145f122771bfb977c48c086cc2ebc67ea07300c64b7d7313
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTPj4IACgkQPDPGULV25OMa5wCgzadw9iiwQZ3+yyNt2HJuXbNv
-gTMAn13wwpFqTr5/2zBH2zH6teYrUfx2
-=0BuI
+iEYEAREIAAYFAlTSKaMACgkQPDPGULV25OObmQCgm5dQ3Fm9frlLY48qtpyc9AGO
+O3cAn2MWbgnmZKJI80OH68YLxTAtkYR3
+=anGp
 -----END PGP SIGNATURE-----
