@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1419 2015/02/02 14:53:49 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.1420 2015/02/04 14:15:39 mpagano Exp $
+
+  04 Feb 2015; Mike Pagano <mpagano@gentoo.org> -git-sources-3.19_rc1.ebuild,
+  -git-sources-3.19_rc2.ebuild, -git-sources-3.19_rc3.ebuild,
+  -git-sources-3.19_rc4.ebuild, -git-sources-3.19_rc5.ebuild,
+  -git-sources-3.19_rc6.ebuild, git-sources-3.19_rc7.ebuild:
+  Fix patch version dependency. Drop old
 
 *git-sources-3.19_rc7 (02 Feb 2015)
 
